--- a/packages/formitem/package.json
+++ b/packages/formitem/package.json
@@ -1,19 +1,16 @@
 {
   "name": "lg-form-item",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
-  "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "del": "rimraf dist"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "教瘦 <54337467@qq.com>",
+  "author": "",
   "license": "MIT",
   "dependencies": {
     "async-validator": "^3.3.0",
     "lodash": "3"
-  },
-  "gitHead": "930f550a1a0da8370aa81ab36274b6d5d281dbf8"
+  }
 }
