--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -1,10 +1,9 @@
 {
   "name": "lg-link",
-  "version": "0.0.1",
-  "description": "lg-link component",
-  "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
-  "author": "教瘦 <54337467@qq.com>",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "author": "",
   "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
